--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "gulf": "^5.0.3",
     "gulp": "^4.0.2",
+    "node-uuid": "^1.4.8",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.1",
