--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,8 +1,6 @@
 absl-py==0.9.0
 astor==0.8.1
 attrs==19.3.0
-Augmentor==0.2.8
-boto3==1.11.16
 botocore==1.14.16
 certifi==2019.11.28
 chardet==3.0.4
@@ -47,7 +45,6 @@ palettable==3.3.0
 pandas==0.25.3
 patsy==0.5.1
 pika==1.1.0
-Pillow==7.0.0
 pluggy==0.13.1
 protobuf==3.11.2
 py==1.8.1
@@ -74,8 +71,6 @@ slackclient==1.3.1
 statsmodels==0.11.1
 statsmodels==0.11.1
 termcolor==1.1.0
-testix==4.11.0
-testlib==0.6.5
 tqdm==4.41.1
 urllib3==1.25.7
 wcwidth==0.1.8
@@ -85,3 +80,4 @@ wrapt==1.11.2
 xlrd==1.2.0
 XlsxWriter==1.2.7
 zipp==2.2.0
+pyopenssl==19.1.0
