--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,13 +14,17 @@ services:
             - FLASK_ENV=development
             - FLASK_APP=server_run.py
             - FLASK_DEBUG=1
-    react-frontend:
-        build: ./react-frontend
+    react_frontend:
+        build: ./react_frontend
         stdin_open: true
         expose:
             - 3000
         ports:
             - '80:3000'
+#      environment:
+#        - HTTPS=true
+#        - SSL_CRT_FILE=cert.crt
+#        - SSL_KEY_FILE=cert.key
 #        volumes:
 #        environment:
 #          - NODE_ENV=development
